--- a/HomeWork3.ipynb
+++ b/HomeWork3.ipynb
@@ -20,7 +20,7 @@
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import t\n",
+    "from scipy.stats import t, norm\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
